# agent-switch

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: index.html
scripts/: run-tests.mjs  tauri-dev-runner.sh
src/: App.css  App.tsx  GatewayOverviewChart.tsx  McpSkillsView.tsx  appConstants.ts  appTypes.ts  appUpdatePolling.test.ts  appUpdatePolling.ts  claudeProxyPanel.test.ts  codexConfig.test.ts  codexConfig.ts  configJsonImport.ts  configPreviews.test.ts  configPreviews.ts  configRecommendations.test.ts  configRecommendations.ts  customProtocolOptions.test.ts  envCheckCards.test.ts  envCheckFeedback.test.ts  envCheckFeedback.ts  envCheckSessionUtils.ts  envCheckUtils.ts  gatewayConfigOptions.ts  gatewayProfile.test.ts  gatewayProfile.ts  gatewayRequirement.test.ts  gatewayRequirement.ts  liquidGlassRemoval.test.ts  minimalInterruptionUx.test.ts  modelDiscovery.test.ts  modelDiscovery.ts  nativeApi.ts  nativeIpc.ts  nativeUi.tsx  nativeWindowLayout.test.ts  profileDisplayUtils.test.ts  profileDisplayUtils.ts  profileFormUtils.test.ts  profileFormUtils.ts  profileOrdering.test.ts  (+13 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddressVariantSwitch.tsx  AppUiPrimitives.tsx  CodexConfigPanel.tsx  GatewayConfigOptionsPanel.tsx  GatewayPage.tsx  GatewayProxyPanel.tsx  GatewayRequirementIcon.tsx  gatewayHelpers.ts  (+4 more)
(+11 files in other folders)
