[package]
name = "switchpp"
version = "1.0.0"
description = "Switch++ cross-platform third-party model config center"
authors = ["sssstwee"]
license-file = "../LICENSE"
edition = "2021"

[lib]
name = "agent_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
json5 = "0.4"
dirs = "6"
regex = "1"
toml = "0.8"
axum = "0.7"
tokio = { version = "1", features = ["net", "sync", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
futures-util = "0.3"
